--- a/index.css
+++ b/index.css
@@ -158,3 +158,17 @@ a:hover {
         color: red;
     }
 }
+
+@media (max-width: 500px) {
+    .title {
+        font-size: 2rem;
+    }
+
+    .description {
+        font-size: 1.5rem;
+    }
+
+    html {
+        font-size: 14px;
+    }
+}
